...
extension ViewModel {
    /// Fetches the contents of a spreadsheet
    func fetchSpreadsheet() {
#if DEBUG
        // Return mock data for UI test
        if CommandLine.arguments.contains("MockData") {
            let file = FileItem(id: UUID(), range: "A1:D1", name: "file1.pdf", fileType: .file)
            self.file.send(.root(withChildren: [file]))
            return
        }
#endif
        
        sheetsService.fetchSpreadsheet()
...
